# secure_development_practices

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
cli_commands/: api_healthcheck.py
t1_company/: practice.json  run_api.py
t1_company/src/: controller.py  exception.py  service.py  shema.py
tests/: conftest.py  test_controller.py
