[tool.poetry]
name = "t1-company"
version = "0.1.0"
description = ""
authors = ["danromkit <95198641+danromkit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.5" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
pydantic = "2.5.1"
pydantic-settings = "2.1.0"
bcrypt = "4.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
